fix up native image generation